# rant

./: .gitignore  BUILD  README.md  WORKSPACE
rant/string/: BUILD.bazel  string.cc  string.h
